Version 0.23.0 (molinaro)
  * SIGPIPE should also cause a shutdown in lwes-event-printing-listener and
    lwes-event-counting-listener, this allows these programs to be the head
    of a processing pipeline, and correctly shutdown when the program after
    it in the pipeline exits.
  * return an error from esf_parser and event_type_db when a non-existent esf
    is attempted to be loaded

Version 0.22.3 (mlum)
  * Fixed memory leak in lexer
  * Allow multiple ESF parsers to exist
  * Changed bison to a pure parser, laying the foundation for a reentrant one

Version 0.22.2 (mlum)
  * Fixed dist target to include lwes-calculate-max-event-size

Version 0.22.1 (mlum)
  * Fixed some test coverage, added NULL safety to emitter

Version 0.22.0 (mlum)
  * Added license headers

Version 0.21.0 (molinaro)
  * 64-bit port actually builds reliably now
  * Removed lwes_perl.{c,h} from the lwes package, they
    didn't belong here, they are now in the lwes-perl package
  * Can now create unicast listeners
  * Fixed problem with from hex string on FreeBSD, this
    required refactoring the printing listener which first needed a test.

Version 0.20.2 (gelinj)
  * Support for 32 and 64-bit added.

Version 0.20.1 (molinaro)
  * minor problem where event name comparison could match prefixes, now
    it does an exact match

Version 0.20.0 (molinaro)
  * add a function compare to the event name prior to deserialization

Version 0.19.1 (molinaro)
  * minor fixes for port to 64-bit linux, basically the compiler is
    stricter about types, so fixing some compile warnings.

Version 0.19.0 (shaffer)
  * fix bad dependency.

Version 0.18.0 (shaffer)
  * Changed listener timestamps on FreeBSD.

Version 0.17.0 (molinaro)
  * set the SO_SNDBUF to a value large enough to send several large events

Version 0.16.2 (molinaro)
  * remove code added in version 0.15.0 to attempt to clear global bison buffer
    as it doesn't work in the case of multiple emitters.  Added a test case with